[gd_scene load_steps=7 format=3 uid="uid://c3l0gq7dmrom0"]

[ext_resource type="Script" path="res://player.gd" id="1_0hq05"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_f5edo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lkx3n"]
radius = 30.0
height = 66.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vla3g"]
radius = 34.0147

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_volh0"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kulee"]
bg_color = Color(0.231415, 0.716746, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0hq05")

[node name="HappyBoo" parent="." instance=ExtResource("1_f5edo")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -22)
shape = SubResource("CapsuleShape2D_lkx3n")

[node name="GunMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -35)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_vla3g")
debug_color = Color(0.818676, 0.380144, 0.373153, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -103.0
offset_top = -129.0
offset_right = 107.0
offset_bottom = -102.0
theme_override_styles/background = SubResource("StyleBoxFlat_volh0")
theme_override_styles/fill = SubResource("StyleBoxFlat_kulee")
value = 100.0
show_percentage = false
